objects/Overall_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <formula>Sales_Hierarchy__r.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookings_Month_0__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bookings Month 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Month_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bookings Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Month_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bookings Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Previous_Month_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bookings Month -1</description>
        <label>Bookings Previous Month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Previous_Month_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bookings Month -2</description>
        <label>Bookings Previous Month 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Previous_Month_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bookings Month -3</description>
        <label>Bookings Previous Month 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <label>GAM Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month_0__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Month-1</description>
        <label>Previous Month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Month -2</description>
        <label>Previous Month 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Month -3</description>
        <label>Previous Month 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GAM Code</label>
        <referenceTo>Sales_Hierarchy__c</referenceTo>
        <relationshipLabel>Overall Forecasts</relationshipLabel>
        <relationshipName>Overall_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_of_Bookings__c</fullName>
        <formula>Bookings_Month_0__c +  Bookings_Month_1__c + Bookings_Month_2__c +  Bookings_Month_3__c +  Bookings_Month_4__c +  Bookings_Month_5__c +  Bookings_Month_6__c +  Bookings_Month_7__c +  Bookings_Month_8__c + Bookings_Month_9__c + Bookings_Month_10__c + Bookings_Month_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Total_Demand__c</fullName>
        <formula>Month_0__c +  Month_1__c+ Month_2__c +Month_3__c+ Month_4__c +Month_5__c +Month_6__c +Month_7__c+Month_8__c + Month_9__c +Month_10__c +Month_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Total Demand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Overall Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>GAM_Code__c</columns>
        <columns>Sales_Hierarchy__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OverallForecast-{000000000}</displayFormat>
        <label>Overall Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overall Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>